--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/pwa": "^0.803.22",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "bootstrap": "^4.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
