--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "numerologic",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,40 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/pwa": "^0.803.22",
-    "@angular/router": "~8.2.14",
-    "@angular/service-worker": "~8.2.14",
+    "@angular/animations": "~16.2.7",
+    "@angular/common": "~16.2.7",
+    "@angular/compiler": "~16.2.7",
+    "@angular/core": "~16.2.7",
+    "@angular/forms": "~16.2.7",
+    "@angular/platform-browser": "~16.2.7",
+    "@angular/platform-browser-dynamic": "~16.2.7",
+    "@angular/router": "~16.2.7",
+    "@angular/service-worker": "~16.2.7",
     "bootstrap": "^4.4.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
-    "@angular/cli": "^8.3.22",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "^16.2.4",
+    "@angular/cli": "^16.2.4",
+    "@angular/compiler-cli": "~16.2.7",
+    "@angular/language-service": "~16.2.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~4.9.5"
   }
 }
