--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest",
-              "src/app-ads.txt"
+              "src/app-ads.txt",
+              "src/ads.txt"
             ],
             "styles": [
               "src/styles.scss"
