--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~16.2.7",
     "@angular/service-worker": "~16.2.7",
     "bootstrap": "^4.4.1",
+    "punycode": "^2.3.1",
     "rxjs": "~6.6.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.13.3"
