--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~16.2.7",
     "@angular/router": "~16.2.7",
     "@angular/service-worker": "~16.2.7",
+    "@angular/material": "^16.2.7",
     "bootstrap": "^4.4.1",
     "punycode": "^2.3.1",
     "rxjs": "~6.6.7",
